--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
   <title>Bergvia Family Office</title>
 
   <style>
-    /* ------------------------------
-       GLOBAL STYLE
-    --------------------------------*/
     body {
       font-family: "Georgia", serif;
       margin: 0;
@@ -19,15 +16,15 @@
 
     a { text-decoration: none; }
 
-    /* ------------------------------
-       HEADER + NAVIGATION (Desktop)
-    --------------------------------*/
+    /* -----------------------------------------
+       HEADER + NAV (Desktop)
+    ------------------------------------------*/
     header {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      z-index: 100;
+      z-index: 2000; /* <-- FIX: ensure above hero image */
       padding: 20px 40px;
       display: flex;
       justify-content: space-between;
@@ -57,19 +54,24 @@
     .logo img {
       height: 70px;
       width: auto;
+      transition: 0.3s;
     }
 
-    /* ------------------------------
-       MOBILE BURGER MENU
-    --------------------------------*/
+    /* -----------------------------------------
+       MOBILE MENU BUTTON
+    ------------------------------------------*/
     .mobile-menu-button {
       display: none;
-      font-size: 30px;
-      color: #fff;
+      font-size: 32px;
       cursor: pointer;
-      text-shadow: 0 1px 2px rgba(0,0,0,0.5);
+      color: #ffffff;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.6);
+      z-index: 3000; /* <-- FIX */
     }
 
+    /* -----------------------------------------
+       MOBILE NAVIGATION
+    ------------------------------------------*/
     .mobile-nav {
       display: none;
       position: fixed;
@@ -77,11 +79,11 @@
       right: -100%;
       width: 70%;
       height: 100%;
-      background: rgba(255,255,255,0.97);
-      box-shadow: -2px 0 10px rgba(0,0,0,0.2);
+      background: rgba(255,255,255,0.98);
       padding: 80px 30px;
       box-sizing: border-box;
-      transition: right 0.3s ease;
+      transition: right 0.35s ease;
+      z-index: 2500; /* <-- FIX */
     }
 
     .mobile-nav.open {
@@ -96,9 +98,9 @@
       font-family: sans-serif;
     }
 
-    /* ------------------------------
+    /* -----------------------------------------
        HERO SECTION
-    --------------------------------*/
+    ------------------------------------------*/
     .full-screen-hero {
       height: 100vh;
       background-image: url('images/Bergvia home page.jpg');
@@ -107,7 +109,6 @@
       background-repeat: no-repeat;
       position: relative;
       color: #ffffff;
-      box-sizing: border-box;
     }
 
     .hero-content {
@@ -115,7 +116,6 @@
       top: 22vh;
       left: 300px;
       right: 60px;
-      text-shadow: 0 2px 5px rgba(0,0,0,0.45);
     }
 
     .hero-content h1 {
@@ -124,6 +124,7 @@
       font-size: clamp(38px, 5.5vw, 80px);
       max-width: 1100px;
       line-height: 1.2;
+      text-shadow: 0 2px 5px rgba(0,0,0,0.45);
     }
 
     .hero-footer {
@@ -131,57 +132,44 @@
       bottom: 60px;
       left: 300px;
       right: 300px;
-      text-shadow: none; /* REMOVE SHADOW */
     }
 
     .hero-footer hr {
       border: none;
       height: 1px;
-      background-color: rgba(255,255,255,0.6);
+      background-color: rgba(255,255,255,0.65);
       margin-bottom: 20px;
     }
 
     .hero-footer p {
       margin: 0;
       max-width: 900px;
-      color: #ffffff;
       font-size: clamp(16px, 1.4vw, 22px);
       line-height: 1.45;
-      text-shadow: none !important; /* ---- OPTION A ---- */
+      color: #000000 !important; /* <-- FIX: BLACK TEXT */
+      text-shadow: none !important; /* ensure clean readability */
     }
 
-    /* ------------------------------
+    /* -----------------------------------------
        RESPONSIVE BEHAVIOR
-    --------------------------------*/
+    ------------------------------------------*/
     @media (max-width: 1024px) {
-      .hero-content {
-        left: 120px;
-        right: 40px;
-      }
-      .hero-footer {
-        left: 120px;
-        right: 120px;
-      }
+      .hero-content { left: 120px; right: 40px; }
+      .hero-footer { left: 120px; right: 120px; }
     }
 
     @media (max-width: 768px) {
+      .desktop-nav { display: none; }
+      .mobile-menu-button { display: block; }
 
-      .logo img {
-        height: 50px;
-      }
+      .logo img { height: 50px; }
 
-      .desktop-nav {
-        display: none;
-      }
-
-      .mobile-menu-button {
-        display: block;
-      }
+      .mobile-nav { display: block; }
 
       .hero-content {
+        top: 18vh;
         left: 30px;
         right: 30px;
-        top: 18vh;
       }
 
       .hero-footer {
@@ -192,23 +180,14 @@
     }
 
     @media (max-width: 480px) {
-      .logo img {
-        height: 42px;
-      }
-      .hero-content {
-        top: 20vh;
-        left: 20px;
-        right: 20px;
-      }
-      .hero-footer {
-        left: 20px;
-        right: 20px;
-      }
+      .logo img { height: 42px; }
+      .hero-content { top: 20vh; left: 20px; right: 20px; }
+      .hero-footer { left: 20px; right: 20px; }
     }
 
-    /* ------------------------------
+    /* -----------------------------------------
        FOOTER
-    --------------------------------*/
+    ------------------------------------------*/
     footer {
       text-align: center;
       padding: 40px 20px;
@@ -223,9 +202,7 @@
       color: #555;
     }
 
-    .footer-nav a:hover {
-      color: #000;
-    }
+    .footer-nav a:hover { color: #000; }
 
     .copyright {
       margin-top: 20px;
@@ -236,12 +213,10 @@
 
 <body>
 
-  <!-- -----------------------------
-       HEADER
-  ---------------------------------->
+  <!-- HEADER -->
   <header>
 
-    <!-- LEFT NAV (Desktop Only) -->
+    <!-- Desktop Menu -->
     <nav class="desktop-nav">
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
@@ -249,19 +224,19 @@
       <a href="contacts.html">Contacts</a>
     </nav>
 
-    <!-- LOGO -->
+    <!-- Logo -->
     <div class="logo">
       <a href="index.html">
         <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Logo">
       </a>
     </div>
 
-    <!-- BURGER (Mobile Only) -->
+    <!-- Burger -->
     <div class="mobile-menu-button" onclick="toggleMobileMenu()">☰</div>
 
   </header>
 
-  <!-- MOBILE SLIDE-IN MENU -->
+  <!-- Mobile Slide-in Menu -->
   <div class="mobile-nav" id="mobileNav">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -270,9 +245,7 @@
     <a href="privacy.html">Privacy</a>
   </div>
 
-  <!-- -----------------------------
-       HERO SECTION
-  ---------------------------------->
+  <!-- HERO -->
   <section class="full-screen-hero">
 
     <div class="hero-content">
@@ -291,9 +264,7 @@
 
   </section>
 
-  <!-- -----------------------------
-       FOOTER
-  ---------------------------------->
+  <!-- FOOTER -->
   <footer>
     <div class="footer-nav">
       <a href="index.html">Home</a>
@@ -302,7 +273,6 @@
       <a href="contacts.html">Contacts</a>
       <a href="privacy.html">Privacy Policy</a>
     </div>
-
     <p class="copyright">
       © 2025, Bergvia Family Office. All Rights Reserved.<br>
       Bergvia Family Office is a private investment company managing the assets of a single family.
