--- a/index.html
+++ b/index.html
@@ -214,27 +214,27 @@
 <body>
 
   <!-- HEADER -->
-  <header>
+<header>
 
-    <!-- Desktop Menu -->
-    <nav class="desktop-nav">
-      <a href="index.html" class="active">Home</a>
-      <a href="about.html">About</a>
-      <a href="investments.html">Investments</a>
-      <a href="contacts.html">Contacts</a>
-    </nav>
+  <!-- Logo on the LEFT -->
+  <div class="logo">
+    <a href="index.html">
+      <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Logo">
+    </a>
+  </div>
 
-    <!-- Logo -->
-    <div class="logo">
-      <a href="index.html">
-        <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Logo">
-      </a>
-    </div>
+  <!-- Desktop Menu on the RIGHT -->
+  <nav class="desktop-nav">
+    <a href="index.html" class="active">Home</a>
+    <a href="about.html">About</a>
+    <a href="investments.html">Investments</a>
+    <a href="contacts.html">Contacts</a>
+  </nav>
 
-    <!-- Burger -->
-    <div class="mobile-menu-button" onclick="toggleMobileMenu()">☰</div>
+  <!-- Burger (unchanged) -->
+  <div class="mobile-menu-button" onclick="toggleMobileMenu()">☰</div>
 
-  </header>
+</header>
 
   <!-- Mobile Slide-in Menu -->
   <div class="mobile-nav" id="mobileNav">
