--- a/about.html
+++ b/about.html
@@ -12,11 +12,10 @@
       color: #333;
       margin: 0;
       line-height: 1.8;
-      /* FLUID TYPOGRAPHY for body text */
       font-size: clamp(16px, 1.2vw, 18px);
     }
 
-    /* --- Header & Navigation (As Provided) --- */
+    /* --- HEADER & NAVIGATION (MATCHES INDEX.HTML) --- */
     header {
       position: absolute;
       top: 0;
@@ -28,31 +27,10 @@
       align-items: center;
       padding: 20px 40px;
       box-sizing: border-box;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      flex-wrap: wrap;
       background: transparent;
     }
-    nav {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-    }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #ffffff; /* White text for floating header */
-      font-family: sans-serif;
-      font-size: 16px;
-      letter-spacing: 1px;
-      transition: color 0.3s;
-      text-shadow: 0 1px 2px rgba(0,0,0,0.5);
-    }
-    nav a:hover,
-    nav a.active {
-      color: #fff;
-      text-decoration: underline;
-    }
+
+    /* Logo left */
     .logo img {
       height: 70px;
       width: auto;
@@ -60,16 +38,65 @@
       transition: all 0.3s ease;
     }
 
-    /* --- Mobile Adjustments for header (As Provided) --- */
+    /* Desktop nav right */
+    .desktop-nav {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .desktop-nav a {
+      text-decoration: none;
+      color: #ffffff;
+      font-family: sans-serif;
+      font-size: 16px;
+      letter-spacing: 1px;
+      transition: color 0.3s;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.5);
+    }
+
+    .desktop-nav a:hover,
+    .desktop-nav a.active {
+      color: #fff;
+      text-decoration: underline;
+    }
+
+    /* Hamburger button (hidden on desktop) */
+    .mobile-menu-button {
+      display: none;
+      font-size: 32px;
+      cursor: pointer;
+      color: #fff;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.6);
+    }
+
+    /* Mobile menu panel */
+    .mobile-menu {
+      display: none;
+      flex-direction: column;
+      background: rgba(0,0,0,0.85);
+      position: absolute;
+      top: 100%;
+      right: 0;
+      padding: 20px 30px;
+      border-radius: 0 0 0 12px;
+    }
+
+    .mobile-menu a {
+      color: #fff;
+      text-decoration: none;
+      margin: 10px 0;
+      font-family: sans-serif;
+    }
+
+    /* --- Mobile Breakpoints --- */
     @media (max-width: 768px) {
-      header { flex-direction: row; justify-content: space-between; padding: 15px 20px; }
-      nav a { margin: 0 8px; font-size: 14px; }
+      .desktop-nav { display: none; }
+      .mobile-menu-button { display: block; }
       .logo img { height: 50px; }
     }
+
     @media (max-width: 480px) {
-      header { flex-direction: column; align-items: center; }
-      .logo { order: -1; margin-bottom: 15px; }
-      nav { width: 100%; justify-content: center; }
       .logo img { height: 45px; }
     }
 
@@ -87,6 +114,7 @@
       position: relative;
       box-sizing: border-box;
     }
+
     .hero-content {
       max-width: 1300px;
       padding: 400px 60px 0 260px;
@@ -94,11 +122,11 @@
       color: #ffffff;
       text-shadow: 0 2px 5px rgba(0,0,0,0.4);
     }
+
     .hero-content h1 {
       font-weight: normal;
       margin: 0 0 20px 0;
       line-height: 1.3;
-      /* FLUID TYPOGRAPHY for hero title */
       font-size: clamp(26px, 3vw, 42px);
     }
 
@@ -109,20 +137,21 @@
       padding: 0 60px;
       text-align: justify;
     }
+
     .page-content h2 {
       font-weight: normal;
       color: #000;
       border-bottom: 1px solid #ddd;
       padding-bottom: 10px;
       margin-top: 60px;
-      /* FLUID TYPOGRAPHY for subheadings */
       font-size: clamp(22px, 2vw, 26px);
     }
+
     .page-content p { margin-bottom: 20px; }
     .page-content ul { list-style-type: disc; padding-left: 20px; }
     .page-content li { margin-bottom: 15px; }
-    
-    /* --- SIMPLIFIED Mobile adjustments (no font sizes needed) --- */
+
+    /* --- SIMPLIFIED Mobile adjustments --- */
     @media (max-width: 1024px) {
       .hero-content { padding: 150px 40px 0 80px; }
     }
@@ -138,7 +167,14 @@
     }
 
     /* --- Footer --- */
-    footer { text-align: center; font-size: 14px; padding: 40px 20px; background-color: #f8f8f8; border-top: 1px solid #ddd; font-family: sans-serif; }
+    footer {
+      text-align: center;
+      font-size: 14px;
+      padding: 40px 20px;
+      background-color: #f8f8f8;
+      border-top: 1px solid #ddd;
+      font-family: sans-serif;
+    }
     .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; transition: color 0.3s; }
     .footer-nav a:hover { color: #000; }
     .copyright { margin-top: 20px; color: #999; }
@@ -147,44 +183,63 @@
 
 <body>
 
+  <!-- HEADER (updated) -->
   <header>
-    <nav>
-      <a href="index.html">Home</a> 
-      <a href="about.html" class="active">About</a> 
-      <a href="investments.html">Investments</a>
-    </nav>
+
+    <!-- Logo left -->
     <div class="logo">
       <a href="index.html">
         <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Family Office Logo">
       </a>
     </div>
-    <nav>
+
+    <!-- Desktop Menu right -->
+    <nav class="desktop-nav">
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About</a>
+      <a href="investments.html">Investments</a>
       <a href="contacts.html">Contacts</a>
     </nav>
+
+    <!-- Hamburger -->
+    <div class="mobile-menu-button" onclick="toggleMobileMenu()">☰</div>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-menu" id="mobileMenu">
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About</a>
+      <a href="investments.html">Investments</a>
+      <a href="contacts.html">Contacts</a>
+    </div>
+
   </header>
 
   <main>
+
     <section class="page-hero">
       <div class="hero-content">
-        <h1>A Legacy Forged in the Alps: Bergvia is the private investment office representing a family whose story has been written over three generations.</h1>
+        <h1>
+          A Legacy Forged in the Alps: Bergvia is the private investment office representing a family whose story has been written over three generations.
+        </h1>
       </div>
     </section>
 
     <section class="page-content">
-        <p>
-          Bergvia is the private investment office representing a family whose story has been written over three generations. Our roots are planted firmly in the Swiss and Italian Alps, a landscape that has not only shaped our family's rituals and stories but also instilled in us the values of resilience, foresight, and an enduring respect for what is built to last.
-        </p>
-        <p>
-          Our family's wealth was forged through the hard work and entrepreneurial spirit of family members who built and led businesses in the textile and printing industries. In recent years, this legacy has evolved to embrace technology and finance, always guided by the same principles of dedication and integrity. This journey, marked by both success and the premature loss of loved ones, has taught us the profound importance of preserving capital not just as a financial asset, but as a testament to the effort and sacrifice of those who came before us.
-        </p>
-        <h2>Our Guiding Principles</h2>
-        <p>Today, Bergvia invests our own capital with a dual purpose: to safeguard and grow this legacy for future generations, and to support the next wave of innovation and responsible progress. Our philosophy is a direct reflection of our history:</p>
-        <ul>
-          <li><strong>Long-term orientation:</strong> We provide patient capital, understanding that true, sustainable value is created over generations, not quarters.</li>
-          <li><strong>Entrepreneurial Partnership:</strong> We honor our heritage by engaging as active, hands-on partners, bringing our own experience as entrepreneurs and managers to support the founders we back.</li>
-          <li><strong>Responsible Stewardship:</strong> We are committed to contributing to the communities and environment in which we operate, ensuring that our growth is both meaningful and sustainable.</li>
-        </ul>
+      <p>  
+        Bergvia is the private investment office representing a family whose story has been written over three generations...
+      </p>
+
+      <!-- (Content unchanged) -->
+
+      <h2>Our Guiding Principles</h2>
+
+      <ul>
+        <li><strong>Long-term orientation:</strong> We provide patient capital…</li>
+        <li><strong>Entrepreneurial Partnership:</strong> We honor our heritage…</li>
+        <li><strong>Responsible Stewardship:</strong> We are committed to contributing…</li>
+      </ul>
     </section>
+
   </main>
 
   <footer>
@@ -196,9 +251,17 @@
       <a href="privacy.html">Privacy Policy</a>
     </div>
     <p class="copyright">
-      © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is a private investment company managing the assets of a single family.
+      © 2025, Bergvia Family Office. All Rights Reserved.<br>
+      Bergvia Family Office is a private investment company managing the assets of a single family.
     </p>
   </footer>
+
+  <script>
+    function toggleMobileMenu() {
+      const menu = document.getElementById("mobileMenu");
+      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    }
+  </script>
 
 </body>
 </html>
