--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@
     <section class="page-content">
       <p>  
         Bergvia is the private investment office representing a family whose story has been written over three generations. Our roots are planted firmly in the Swiss and Italian Alps, a landscape that has not only shaped our family's rituals and stories but also instilled in us the values of resilience, foresight, and an enduring respect for what is built to last.
-        Our family's wealth was forged through the hard work and entrepreneurial spirit of family members who built and led businesses in the textile and printing industries. In recent years, this legacy has evolved to embrace technology and finance, always guided by the same principles of dedication and integrity. This journey, marked by both success and the premature loss of loved ones, has taught us the profound importance of preserving capital not just as a financial asset, but as a testament to the effort and sacrifice of those who came before us.
+        <br>Our family's wealth was forged through the hard work and entrepreneurial spirit of family members who built and led businesses in the textile and printing industries. In recent years, this legacy has evolved to embrace technology and finance, always guided by the same principles of dedication and integrity. This journey, marked by both success and the premature loss of loved ones, has taught us the profound importance of preserving capital not just as a financial asset, but as a testament to the effort and sacrifice of those who came before us.
       </p>
 
       <!-- (Content unchanged) -->
